# two-dimensional-heat-equation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  result.gnuplot  test.gnuplot
cmake/: CMakeLists.txt.in
src/: CommonTools.cpp  CommonTools.h  main.cpp
test/: CMakeLists.txt  CommonToolsTests.cpp  main.cpp
